# PhysX

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.mjs  .prototools  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  PhysX.DotSettings  README.md  build.bat  build.sh  cspell.config.yaml  package.json  pyproject.toml  requirements.txt  sonar-project.properties  taskfile.yaml  vcpkg.json
.cspell/: custom-dictionary.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: analyze.yml  build.yml  codeql.yml  sonar-cloud.yml
build_wrapper_output_directory/: build-wrapper-dump.json
kaplademo/: README.md
kaplademo/source/compiler/vc15win64-PhysX_4.1/: DemoFramework.vcxproj  KaplaDemo.vcxproj
physx/: generate_projects.bat  generate_projects.sh  platform_readme.html  release_notes.html
physx/buildtools/: cmake_generate_projects.py
physx/buildtools/presets/public/: vc16win64.xml  vc17win32.xml  vc17win64.xml
physx/compiler/public/: .gitignore  CMakeLists.txt
physx/include/foundation/: PxMathUtils.h
physx/samples/compiler/cmake/: CMakeLists.txt  SampleRenderer.cmake
physx/samples/compiler/cmake/windows/: CMakeLists.txt  SamplePlatform.cmake  SampleRenderer.cmake
physx/snippets/compiler/cmake/: CMakeLists.txt
physx/source/compiler/cmake/: CMakeLists.txt
physx/source/compiler/cmake/linux/: CMakeLists.txt
physx/source/compiler/cmake/mac/: CMakeLists.txt
physx/source/compiler/cmake/windows/: CMakeLists.txt
physx/source/foundation/include/: PsVecMath.h  PsVecMathAoSScalar.h  PsVecMathAoSScalarInline.h  PsVecMathSSE.h  PsVecQuat.h  PsVecTransform.h
physx/source/foundation/include/unix/sse2/: PsUnixSse2AoS.h  PsUnixSse2InlineAoS.h
physx/source/foundation/src/: PsMathUtils.cpp
physx/source/geomutils/src/intersection/: GuIntersectionEdgeEdge.cpp
physx/source/geomutils/src/mesh/: GuBV4Build.cpp
physx/source/lowleveldynamics/include/: DyFeatherstoneArticulationUtils.h
physx/source/lowleveldynamics/src/: DyArticulation.cpp  DyArticulationContactPrep.cpp  DyFeatherstoneArticulation.cpp  DyTGSContactPrep.cpp
physx/source/physxcooking/src/: EdgeList.cpp
physx/source/physxcooking/src/mesh/: GrbTriangleMeshCooking.h
physx/source/physxextensions/src/: ExtConvexMeshExt.cpp
physx/source/physxextensions/src/serialization/Xml/: SnXmlSerialization.cpp
physx/source/physxvehicle/src/: PxVehicleUpdate.cpp
physx/tools/physxmetadatagenerator/: generateMetaData.py
physx/tools/physxmetadatagenerator/lib/: compare.py  utils.py
pxshared/include/foundation/: Px.h  PxBounds3.h  PxMat33.h  PxMat44.h  PxMath.h  PxPlane.h  PxPreprocessor.h  PxQuat.h  PxSimpleTypes.h  PxTransform.h  PxVec2.h  PxVec3.h  PxVec4.h
pxshared/include/foundation/unix/: PxUnixIntrinsics.h
pxshared/include/foundation/windows/: PxWindowsIntrinsics.h
