[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-gameworks-physx"
version = "4.0.0"
description = "NVIDIA PhysX SDK is a scalable multi-platform physics solution supporting a wide range of devices."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["sample", "setuptools", "development"]
authors = [{ name = "NVIDIA", email = "author@example.com" }]
maintainers = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "ruff",
    "pylance",
    "pylint",
    "mypy",
    "black",
    "ruff",
    "build",
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["physx/buildtools"]
namespaces = false

[project.optional-dependencies]
dev = ["ruff", "pylance", "pylint", "mypy", "black"]
test = ["coverage", "pytest"]

[project.urls]
"Homepage" = "https://github.com/physics-playground/PhysX"
"Bug Reports" = "https://github.com/physics-playground/PhysX/issues"
"Say Thanks!" = "http://saythanks.io/to/joelvaneenwyk"
"Source" = "https://github.com/physics-playground/PhysX/"

[tool.ruff]
exclude = [
    ".build",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
